--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -24,6 +23,11 @@
   <header>
     <h1>Internet Federal Associados</h1>
     <p>Planos Vivo, Claro e TIM a partir de R$29,90/mês</p>
+    <div style="margin-top: 1rem;">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/7/7d/Vivo_logo_2017.png" alt="Vivo" style="height: 40px; margin: 0 10px;">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/3/38/Claro_logo_2017.png" alt="Claro" style="height: 40px; margin: 0 10px;">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Tim_logo_2020.png" alt="TIM" style="height: 40px; margin: 0 10px;">
+    </div>
   </header>
 
   <div class="container">
@@ -53,7 +57,7 @@
         <tr>
           <td>Vivo</td>
           <td>40 GB</td>
-          <td>4G/55G</td>
+          <td>4G/5G</td>
           <td>R$49,90</td>
           <td>Não</td>
           <td>Sim</td>
