--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -19,10 +17,17 @@
     .cta:hover { background: #00664e; }
     .faq { margin-top: 2rem; }
     form input, form select, form button { display: block; width: 100%; margin: 0.5rem 0; padding: 0.5rem; }
+    .logos { margin-bottom: 1rem; }
+    .logos img { height: 30px; margin: 0 10px; vertical-align: middle; }
   </style>
 </head>
 <body>
   <header>
+    <div class="logos">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/71/Logo_Vivo_2020.png/200px-Logo_Vivo_2020.png" alt="Vivo" />
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/Claro_logo_2017.svg/200px-Claro_logo_2017.svg.png" alt="Claro" />
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Logo_TIM_2020.svg/200px-Logo_TIM_2020.svg.png" alt="TIM" />
+    </div>
     <h1>Internet Federal Associados</h1>
     <p>Planos Vivo, Claro e TIM a partir de R$29,90/mês</p>
   </header>
@@ -127,4 +132,3 @@
   </footer>
 </body>
 </html>
-
