--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -10,8 +8,6 @@
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; line-height: 1.6; background: #f5f5f5; }
     header, footer { background: #0e1a35; color: #fff; padding: 1rem; text-align: center; }
-    .logos { margin-top: 1rem; }
-    .logos img { height: 60px; margin: 0 20px; vertical-align: middle; }
     .container { max-width: 960px; margin: auto; padding: 2rem; background: #fff; }
     h1, h2 { color: #0e1a35; }
     table { width: 100%; border-collapse: collapse; margin-bottom: 2rem; }
@@ -21,14 +17,16 @@
     .cta:hover { background: #00664e; }
     .faq { margin-top: 2rem; }
     form input, form select, form button { display: block; width: 100%; margin: 0.5rem 0; padding: 0.5rem; }
+    .logos { display: flex; justify-content: center; align-items: center; gap: 2rem; margin-bottom: 1rem; flex-wrap: wrap; }
+    .logos img { height: 60px; object-fit: contain; }
   </style>
 </head>
 <body>
   <header>
     <div class="logos">
-      <img src="vivo.png" alt="Vivo" />
-      <img src="claro.png" alt="Claro" />
-      <img src="tim.png" alt="TIM" />
+      <img src="logos/vivo.png" alt="Vivo" />
+      <img src="logos/claro.png" alt="Claro" />
+      <img src="logos/tim.png" alt="TIM" />
     </div>
     <p>Planos Vivo, Claro e TIM a partir de R$29,90/mês</p>
   </header>
@@ -55,7 +53,7 @@
           <td>R$29,90</td>
           <td>Não</td>
           <td>Sim</td>
-          <td><a class="cta" href="#form">Contratar</a></td>
+          <td><a class="cta" href="https://federalassociados.com.br/pbi/cadastro/11180218062024100653" target="_blank">Contratar</a></td>
         </tr>
         <tr>
           <td>Vivo</td>
@@ -64,7 +62,7 @@
           <td>R$49,90</td>
           <td>Não</td>
           <td>Sim</td>
-          <td><a class="cta" href="#form">Contratar</a></td>
+          <td><a class="cta" href="https://federalassociados.com.br/pbi/cadastro/11180218062024100653" target="_blank">Contratar</a></td>
         </tr>
         <tr>
           <td>TIM</td>
@@ -73,7 +71,7 @@
           <td>R$69,90</td>
           <td>Não</td>
           <td>Sim</td>
-          <td><a class="cta" href="#form">Contratar</a></td>
+          <td><a class="cta" href="https://federalassociados.com.br/pbi/cadastro/11180218062024100653" target="_blank">Contratar</a></td>
         </tr>
         <tr>
           <td>Claro</td>
@@ -82,7 +80,7 @@
           <td>R$49,90</td>
           <td>Não</td>
           <td>Sim</td>
-          <td><a class="cta" href="#form">Contratar</a></td>
+          <td><a class="cta" href="https://federalassociados.com.br/pbi/cadastro/11180218062024100653" target="_blank">Contratar</a></td>
         </tr>
         <tr>
           <td>Claro</td>
@@ -91,7 +89,7 @@
           <td>R$69,90</td>
           <td>Não</td>
           <td>Sim</td>
-          <td><a class="cta" href="#form">Contratar</a></td>
+          <td><a class="cta" href="https://federalassociados.com.br/pbi/cadastro/11180218062024100653" target="_blank">Contratar</a></td>
         </tr>
       </tbody>
     </table>
