--- a/index.html
+++ b/index.html
@@ -1,133 +1,146 @@
+
+
+
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Compare planos de internet Federal Associados com Vivo, Claro e TIM. Preços acessíveis, sem fidelidade. Escolha o seu!" />
-  <title>Planos Federal Associados | Internet 4G/5G com Chip Incluso</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; line-height: 1.6; background: #f5f5f5; }
-    header, footer { background: #0e1a35; color: #fff; padding: 1rem; text-align: center; }
-    .container { max-width: 960px; margin: auto; padding: 2rem; background: #fff; }
-    h1, h2 { color: #0e1a35; }
-    table { width: 100%; border-collapse: collapse; margin-bottom: 2rem; }
-    table, th, td { border: 1px solid #ccc; }
-    th, td { padding: 0.75rem; text-align: center; }
-    .cta { background: #008060; color: #fff; padding: 0.75rem 1.5rem; text-decoration: none; display: inline-block; margin-top: 1rem; border-radius: 5px; }
-    .cta:hover { background: #00664e; }
-    .faq { margin-top: 2rem; }
-    form input, form select, form button { display: block; width: 100%; margin: 0.5rem 0; padding: 0.5rem; }
-    .logos { display: flex; justify-content: center; align-items: center; gap: 2rem; margin-bottom: 1rem; flex-wrap: wrap; }
-    .logos img { height: 60px; object-fit: contain; }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="description" content="Compare planos de internet Federal Associados com Vivo, Claro e TIM. Preços acessíveis, sem fidelidade. Escolha o seu!" />
+<title>Planos Federal Associados | Internet 4G/5G com Chip Incluso</title>
+<style>
+body { font-family: Arial, sans-serif; margin: 0; padding: 0; line-height: 1.6; background: #f5f5f5; }
+header, footer { background: #0e1a35; color: #fff; padding: 1rem; text-align: center; }
+.container { max-width: 960px; margin: auto; padding: 2rem; background: #fff; }
+h1, h2 { color: #0e1a35; }
+table { width: 100%; border-collapse: collapse; margin-bottom: 2rem; }
+table, th, td { border: 1px solid #ccc; }
+th, td { padding: 0.75rem; text-align: center; }
+.cta { background: #008060; color: #fff; padding: 0.75rem 1.5rem; text-decoration: none; display: inline-block; margin-top: 1rem; border-radius: 5px; }
+.cta:hover { background: #00664e; }
+.faq { margin-top: 2rem; }
+form input, form select, form button { display: block; width: 100%; margin: 0.5rem 0; padding: 0.5rem; }
+.logos img { width: 80px; margin: 0 10px; vertical-align: middle; }
+.logos { margin-top: 10px; }
+</style>
 </head>
 <body>
-  <header>
-    <div class="logos">
-      <img src="logos/vivo.png" alt="Vivo" />
-      <img src="logos/claro.png" alt="Claro" />
-      <img src="logos/tim.png" alt="TIM" />
-    </div>
-    <p>Planos Vivo, Claro e TIM a partir de R$29,90/mês</p>
-  </header>
+<header>
+<div class="logos">
+<img src="vivo.png" alt="Vivo" />
+<img src="claro.png" alt="Claro" />
+<img src="tim.png" alt="TIM" />
+</div>
+<h1>Internet Federal Associados</h1>
+<p>Planos Vivo, Claro e TIM a partir de R$29,90/mês</p>
+</header>
 
-  <div class="container">
-    <h2>Compare os Planos</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>Operadora</th>
-          <th>Franquia</th>
-          <th>Velocidade</th>
-          <th>Preço</th>
-          <th>Fidelidade</th>
-          <th>Chip Incluso</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Vivo</td>
-          <td>15 GB<br><small>*Só internet — planos exclusivamente para navegação</small></td>
-          <td>4G/5G</td>
-          <td>R$29,90</td>
-          <td>Não</td>
-          <td>Sim</td>
-          <td><a class="cta" href="https://federalassociados.com.br/pbi/cadastro/11180218062024100653" target="_blank">Contratar</a></td>
-        </tr>
-        <tr>
-          <td>Vivo</td>
-          <td>40 GB</td>
-          <td>4G/5G</td>
-          <td>R$49,90</td>
-          <td>Não</td>
-          <td>Sim</td>
-          <td><a class="cta" href="https://federalassociados.com.br/pbi/cadastro/11180218062024100653" target="_blank">Contratar</a></td>
-        </tr>
-        <tr>
-          <td>TIM</td>
-          <td>80 GB</td>
-          <td>4G/5G</td>
-          <td>R$69,90</td>
-          <td>Não</td>
-          <td>Sim</td>
-          <td><a class="cta" href="https://federalassociados.com.br/pbi/cadastro/11180218062024100653" target="_blank">Contratar</a></td>
-        </tr>
-        <tr>
-          <td>Claro</td>
-          <td>40 GB</td>
-          <td>4G/5G</td>
-          <td>R$49,90</td>
-          <td>Não</td>
-          <td>Sim</td>
-          <td><a class="cta" href="https://federalassociados.com.br/pbi/cadastro/11180218062024100653" target="_blank">Contratar</a></td>
-        </tr>
-        <tr>
-          <td>Claro</td>
-          <td>80 GB</td>
-          <td>4G/5G</td>
-          <td>R$69,90</td>
-          <td>Não</td>
-          <td>Sim</td>
-          <td><a class="cta" href="https://federalassociados.com.br/pbi/cadastro/11180218062024100653" target="_blank">Contratar</a></td>
-        </tr>
-      </tbody>
-    </table>
 
-    <h2>Benefícios</h2>
-    <ul>
-      <li>Sem fidelidade e sem multa de cancelamento</li>
-      <li>Chip enviado gratuitamente</li>
-      <li>Atendimento via WhatsApp após contratação</li>
-      <li>Suporte para trocas e atualizações de plano</li>
-    </ul>
+<div class="container">
+<h2>Compare os Planos</h2>
+<table>
+<thead>
+<tr>
+<th>Operadora</th>
+<th>Franquia</th>
+<th>Velocidade</th>
+<th>Preço</th>
+<th>Fidelidade</th>
+<th>Chip Incluso</th>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Vivo</td>
+<td>15 GB<br><small>*Só internet — planos exclusivamente para navegação</small></td>
+<td>4G/5G</td>
+<td>R$29,90</td>
+<td>Não</td>
+<td>Sim</td>
+<td><a class="cta" href="#form">Contratar</a></td>
+</tr>
+<tr>
+<td>Vivo</td>
+<td>40 GB</td>
+<td>4G/5G</td>
+<td>R$49,90</td>
+<td>Não</td>
+<td>Sim</td>
+<td><a class="cta" href="#form">Contratar</a></td>
+</tr>
+<tr>
+<td>TIM</td>
+<td>80 GB</td>
+<td>4G/5G</td>
+<td>R$69,90</td>
+<td>Não</td>
+<td>Sim</td>
+<td><a class="cta" href="#form">Contratar</a></td>
+</tr>
+<tr>
+<td>Claro</td>
+<td>40 GB</td>
+<td>4G/5G</td>
+<td>R$49,90</td>
+<td>Não</td>
+<td>Sim</td>
+<td><a class="cta" href="#form">Contratar</a></td>
+</tr>
+<tr>
+<td>Claro</td>
+<td>80 GB</td>
+<td>4G/5G</td>
+<td>R$69,90</td>
+<td>Não</td>
+<td>Sim</td>
+<td><a class="cta" href="#form">Contratar</a></td>
+</tr>
+</tbody>
+</table>
 
-    <div class="faq">
-      <h2>Perguntas Frequentes</h2>
-      <p><strong>Tem fidelização?</strong> Não. Todos os planos são sem fidelidade.</p>
-      <p><strong>Posso usar em qualquer celular?</strong> Sim. Desde que o aparelho seja compatível com chip 4G ou 5G.</p>
-      <p><strong>O plano é pré-pago ou mensal?</strong> Mensal, com renovação automática.</p>
-    </div>
 
-    <h2 id="form">Contratar Agora</h2>
-    <form action="https://api.whatsapp.com/send" method="GET" target="_blank">
-      <input type="hidden" name="phone" value="SEUNUMEROAQUI" />
-      <input type="text" name="Nome" placeholder="Seu nome" required />
-      <input type="tel" name="Telefone" placeholder="WhatsApp" required />
-      <select name="Plano" required>
-        <option value="">Selecione um plano</option>
-        <option value="Vivo 15GB - R$29,90">Vivo 15GB - R$29,90</option>
-        <option value="Vivo 40GB - R$49,90">Vivo 40GB - R$49,90</option>
-        <option value="TIM 80GB - R$69,90">TIM 80GB - R$69,90</option>
-        <option value="Claro 40GB - R$49,90">Claro 40GB - R$49,90</option>
-        <option value="Claro 80GB - R$69,90">Claro 80GB - R$69,90</option>
-      </select>
-      <button type="submit">Enviar via WhatsApp</button>
-    </form>
-  </div>
+<h2>Benefícios</h2>
+<ul>
+<li>Sem fidelidade e sem multa de cancelamento</li>
+<li>Chip enviado gratuitamente</li>
+<li>Atendimento via WhatsApp após contratação</li>
+<li>Suporte para trocas e atualizações de plano</li>
+</ul>
 
-  <footer>
-    <p>© 2025 Federal Associados. Todos os direitos reservados.</p>
-  </footer>
+
+<div class="faq">
+<h2>Perguntas Frequentes</h2>
+<p><strong>Tem fidelização?</strong> Não. Todos os planos são sem fidelidade.</p>
+<p><strong>Posso usar em qualquer celular?</strong> Sim. Desde que o aparelho seja compatível com chip 4G ou 5G.</p>
+<p><strong>O plano é pré-pago ou mensal?</strong> Mensal, com renovação automática.</p>
+</div>
+
+
+<h2 id="form">Contratar Agora</h2>
+<form action="https://federalassociados.com.br/pbi/cadastro/11180218062024100653" method="GET" target="_blank">
+<input type="text" name="Nome" placeholder="Seu nome" required />
+<input type="tel" name="Telefone" placeholder="WhatsApp" required />
+<select name="Plano" required>
+<option value="">Selecione um plano</option>
+<option value="Vivo 15GB - R$29,90">Vivo 15GB - R$29,90</option>
+<option value="Vivo 40GB - R$49,90">Vivo 40GB - R$49,90</option>
+<option value="TIM 80GB - R$69,90">TIM 80GB - R$69,90</option>
+<option value="Claro 40GB - R$49,90">Claro 40GB - R$49,90</option>
+<option value="Claro 80GB - R$69,90">Claro 80GB - R$69,90</option>
+</select>
+<button type="submit">Contratar</button>
+</form>
+</div>
+
+
+<footer>
+<p>© 2025 Federal Associados. Todos os direitos reservados.</p>
+</footer>
 </body>
 </html>
+
+
+
+
